crates/cli/tests/snapshots/postgres__pg_alias_install_records_canonical_postgres_resource.snap
---
source: crates/cli/tests/postgres.rs
expression: snapshot
---
(
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "Installed Postgres track 16 (16.4-pv1)\n",
        stderr: "warning: PV daemon is not running; reconciliation will run after `pv setup` starts it\n",
    },
    [
        ResourceRecordSnapshot {
            resource_name: "postgres",
            track: "16",
            desired_state: "Installed",
            installed_version: Some(
                "16.4-pv1",
            ),
            current_artifact_path: Some(
                "home/.pv/resources/postgres/16/releases/16.4-pv1",
            ),
            usage_count: 0,
            removal_prune: false,
            removal_force: false,
        },
    ],
)
