crates/cli/tests/snapshots/postgres__postgres_list_on_a_terminal.snap
---
source: crates/cli/tests/postgres.rs
expression: snapshot
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            0,
        ),
    ),
    stdout: "TRACK  STATUS     PORTS     PROJECTS  VERSION\n16     ● running  tcp=5432  0         16.4-pv1\n   <tempdir>/home/.pv/resources/postgres/16/releases/16.4-pv1\n",
    stderr: "",
}
