crates/cli/tests/snapshots/postgres__postgres_list_on_an_80_column_terminal.snap
---
source: crates/cli/tests/postgres.rs
expression: snapshot
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            0,
        ),
    ),
    stdout: "16\n   status    ● running\n   ports     tcp=5432\n   projects  0\n   version   16.4-pv1\n   path      <tempdir>/home/.pv/resources/postgres/16/releases/16.4-pv1\n",
    stderr: "",
}
