crates/cli/tests/snapshots/postgres__postgres_uninstall_force_prune_queues_removal_intent.snap
---
source: crates/cli/tests/postgres.rs
expression: snapshot
---
(
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "Queued removal for Postgres track 16\n  data will be pruned\n",
        stderr: "warning: PV daemon is not running; reconciliation will run after `pv setup` starts it\n",
    },
    [
        ResourceRecordSnapshot {
            resource_name: "postgres",
            track: "16",
            desired_state: "Removed",
            installed_version: Some(
                "16.4-pv1",
            ),
            current_artifact_path: Some(
                "home/.pv/resources/postgres/16/releases/16.4-pv1",
            ),
            usage_count: 0,
            removal_prune: true,
            removal_force: true,
        },
    ],
)
